# Qwirkle-SFML

./: .gitignore  CMakeLists.txt  README.md
rc/: config.txt
rc/locales/: FR.txt  default.txt
src/: Ai.cpp  GameScreen.cpp  GameScreen.hpp  Grid.cpp  Grid.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp  main.cpp
src/Benchmark/: AIGameController.cpp  AIGameController.hpp
src/Controller/: Ai.cpp  Ai.hpp  Controller.cpp  Controller.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
src/Engine/: Cursor.cpp  Cursor.hpp  GlobalClock.cpp  GlobalClock.hpp  Localisator.cpp  Localisator.hpp  RessourceLoader.cpp  RessourceLoader.hpp  Screen.cpp  Screen.hpp  Settings.cpp  Settings.hpp  Utilities.cpp  Utilities.hpp  alphanum.hpp  constantes.hpp
src/Online/: Client.cpp  Client.hpp  ClientGameScreen.cpp  ClientGameScreen.hpp  Commands.cpp  Commands.hpp  DisconnectedException.hpp  HostGameScreen.cpp  HostGameScreen.hpp  OnlineGameScreen.cpp  OnlineGameScreen.hpp
src/Online/Lobby/: DefaultLobbyScreen.cpp  DefaultLobbyScreen.hpp  HostLobbyScreen.cpp  HostLobbyScreen.hpp  JoinLobbyScreen.cpp  JoinLobbyScreen.hpp  WaitingLobbyScreen.cpp  WaitingLobbyScreen.hpp
src/UI/: Ui.cpp  Ui.hpp
src/View/: EndScreen.cpp  EndScreen.hpp  GameScreen.cpp  GameScreen.hpp  Grid.cpp  Grid.hpp  TitleScreen.cpp  TitleScreen.hpp
